--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="false"
                  android:theme="@style/AppTheme">
+
         <activity android:name=".views.activities.MainActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
@@ -20,5 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".views.activities.MediaDetailActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 </manifest>
